--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,14 @@ body {
 }
 
 .header {
-    padding: 20px;
+    padding: 40px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: rgb(9, 70, 9);
+    background-color: black;
     color: #ffffff;
 }
 
 .header-button {
-    background-color:  rgb(9, 70, 9);
+    background-color: black;
     padding: 0;
     border: none;
     background: none;
@@ -24,6 +24,7 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     cursor: pointer;
     font-size: large;
+
 }
 
 .header h1 {
@@ -32,7 +33,7 @@ body {
 }
 
 .header h1 .seo {
-    color: #d9dcd6;
+    color: goldenrod;
 }
 
 .header div {
@@ -41,10 +42,6 @@ body {
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
-}
-
-.header div ul {
-    list-style-type: none;
 }
 
 .header div ul li {
@@ -68,59 +65,20 @@ p {
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
-    box-shadow: 20px 20px 20px black;
+    box-shadow: 20px 20px 20px goldenrod;
+    
 }
 
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
-
-.benefits {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: rgb(9, 70, 9);
-}
-
-.benefit-section h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-section img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
 
 .main-section {
     margin-bottom: 20px;
-    padding: 50px;
+    padding: 20px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color:rgb(9, 70, 9);
+    background-color:black;
     color: #ffffff;
-}
-
-.main-section img {
-    max-height: 200px;
-    border-radius: 10px;
+    position: relative;
+    box-shadow: 20px 20px 20px goldenrod;
 }
 
 .main-section h2 {
@@ -128,13 +86,16 @@ p {
     font-size: 36px;
 }
 
-.footer {
-    padding: 30px;
+footer {
+    background-color: whitesmoke;
+    width: 100%;
+    padding: 5px;
+    border: 5px solid black;
+    margin: 5px;
+    border-radius: 5px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
-
-.footer h2 {
-    font-size: 20px;
+    text-align: left;
+    display: block;
+    margin-top: auto;
 }
