--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,20 @@
     padding: 0;
     margin: 0;
 }
+#cityImage {
+    width: 100%;
+    max-height: 500px;
+    overflow: hidden;
+    object-fit: cover;
+    margin-bottom: 20px;
+}
 
 body {
     background-color: rgba(245, 245, 245, 0.877); 
 }
 
 .header {
-    padding: 40px;
+    padding: 60px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: black;
     color: #ffffff;
@@ -22,8 +29,9 @@ body {
     background: none;
     color: #ffffff;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    cursor: pointer;
+    cursor: grab;
     font-size: large;
+    box-shadow: 0 0 20px silver;
 
 }
 
@@ -33,7 +41,7 @@ body {
 }
 
 .header h1 .seo {
-    color: goldenrod;
+    color: silver;
 }
 
 .header div {
@@ -65,7 +73,7 @@ p {
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
-    box-shadow: 20px 20px 20px goldenrod;
+    box-shadow: 20px 20px 20px silver;
     
 }
 
@@ -73,12 +81,11 @@ p {
 .main-section {
     margin-bottom: 20px;
     padding: 20px;
-    height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color:black;
     color: #ffffff;
     position: relative;
-    box-shadow: 20px 20px 20px goldenrod;
+    box-shadow: 20px 20px 20px silver;
 }
 
 .main-section h2 {
