--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: sans-serif;
 }
 #cityImage {
     width: 100%;
@@ -10,16 +11,90 @@
     object-fit: cover;
     margin-bottom: 20px;
 }
-
+.imageDiv {
+    position: relative;
+    display: -webkit-flex;
+    background-color: black;
+    flex: 1; 
+}
+.thumbNailImage {
+    width: 100%;
+    overflow: hidden;
+    object-fit: cover;
+    margin-bottom: 5px;
+    margin-top: 20px;
+    height: 100%;
+}
+.imageText {
+    position:absolute;
+    top: 40px;
+    left: 20px;
+    color: whitesmoke;
+    font-family: sans-serif;
+}
+.imageLink {
+    cursor: pointer;
+}
+#coffeeImage {
+    width: 90%;
+    max-height: 400px;
+    object-fit: cover;
+    margin-bottom: 5px;
+    margin-top: 20px;
+    align-items: center;
+}
+#coffeeImageDiv {
+    display: flex;
+    position: relative;
+    flex: 1;
+}
+#coffeeHeader {
+    position: absolute;
+    top: 40px;
+    left: 20px;
+    color: whitesmoke;
+    font-size: 30px;
+}
+#carImage {
+    width: 350px;
+    max-height: 300px;
+    overflow: hidden;
+    object-fit: cover;
+    margin-bottom: 5px;
+    margin-top: 20px;
+}
+#basketballImage {
+    width: 350px;
+    max-height: 300px;
+    overflow: hidden;
+    object-fit: cover;
+    margin-bottom: 5px;
+    margin-top: 20px;
+}
+#fallImage {
+    width: 300px;
+    max-height: 300px;
+    overflow: hidden;
+    object-fit: cover;
+    margin-bottom: 5px;
+    margin-top: 20px;
+}
+#boxingImage {
+    width: 300px;
+    max-height: 300px;
+    overflow: hidden;
+    object-fit: cover;
+    margin-bottom: 5px;
+    margin-top: 20px;
+}
 body {
     background-color: rgba(245, 245, 245, 0.877); 
 }
 
 .header {
     padding: 60px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: black;
-    color: #ffffff;
+    color: red;
 }
 
 .header-button {
@@ -28,11 +103,9 @@ body {
     border: none;
     background: none;
     color: #ffffff;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     cursor: grab;
     font-size: large;
-    box-shadow: 0 0 20px silver;
-
+    box-shadow: 3px 3px 1px red;
 }
 
 .header h1 {
@@ -70,31 +143,54 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
-    box-shadow: 20px 20px 20px silver;
+    box-shadow: 20px 20px 20px red;
     
 }
 
 
 .main-section {
-    margin-bottom: 20px;
-    padding: 20px;
+    margin-top: 20px;
+    padding: 40px;
+    padding-top: 30px;
+    padding-bottom: 60px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color:black;
     color: #ffffff;
     position: relative;
-    box-shadow: 20px 20px 20px silver;
 }
-
+.imageSection {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 40px;
+    margin-top: -60px;
+}
 .main-section h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+.content {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+.contact {
+    display: flex;
+    flex: 1;
+    width: 100%;
+    flex-direction: column;
+    padding: 20px;
+    background-color: black;
+    color: white;
+    margin-bottom: 20px;
+}
+.contactText {
+    margin-top: 20px;
+}
 footer {
-    background-color: whitesmoke;
+    background-color: red;
     width: 100%;
     padding: 5px;
     border: 5px solid black;
@@ -105,4 +201,5 @@ footer {
     text-align: left;
     display: block;
     margin-top: auto;
+    margin-bottom: 20px;
 }
