--- a/styles.css
+++ b/styles.css
@@ -203,3 +203,13 @@ footer {
     margin-top: auto;
     margin-bottom: 20px;
 }
+.projectsCont {
+    background-color: lightskyblue;
+    display: flex;
+    flex: 1;
+    width: 100%;
+    flex-direction: column;
+    padding: 20px;
+    color: black;
+    margin-bottom: 20px;
+}
