--- a/styles.css
+++ b/styles.css
@@ -213,3 +213,19 @@ footer {
     color: black;
     margin-bottom: 20px;
 }
+
+#like_button_container:hover {
+    display: inline-block;
+    background-color: yellow;
+    border-radius: 10px;
+    border: 4px double black;
+    color: black;
+    text-align: center;
+    font-size: 15px;
+    padding: 5px;
+    width: 100px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+    align-content: center;
+}
