--- a/styles.css
+++ b/styles.css
@@ -214,9 +214,9 @@ footer {
     margin-bottom: 20px;
 }
 
-#like_button_container:hover {
+#like_button_container {
     display: inline-block;
-    background-color: yellow;
+    background-color: red;
     border-radius: 10px;
     border: 4px double black;
     color: black;
@@ -224,8 +224,8 @@ footer {
     font-size: 15px;
     padding: 5px;
     width: 100px;
-    transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
     align-content: center;
+    transition: all 0.5s;
 }
